--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<properties>
+   <maven.compiler.source>1.6</maven.compiler.source>
+   <maven.compiler.target>1.6</maven.compiler.target>
+ </properties>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.naresh</groupId>
   <artifactId>aws-build-sample-maven-project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 </project>
+
