--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ phases:
       - mvn test
   post_build:
     commands:
+      - git --version
+      - git clone https://github.com/yankils/hello-world.git
       - echo Build completed on `date`
       - mvn package
 artifacts:
